fix: added centered text on mobile view

--- a/src/component/dashboard-summary/summary.scss
+++ b/src/component/dashboard-summary/summary.scss
@@ -39,6 +39,7 @@
 
     @include respond-to("phone") {
       align-items: center;
+      text-align: center;
     }
     .icon {
       width: 40px;
